force-app/main/default/objects/Resource_Consult_Review__c/Resource_Consult_Review__c.object-meta.xml
<CustomObject>
    <label>Resource Consult Review</label>
    <nameField>
        <displayFormat>RCV-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Consult Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>