force-app/main/default/objects/Resource_Consult_Review__c/fields/Investigation__c.field-meta.xml
<CustomField>
    <fullName>Investigation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investigation</label>
    <referenceTo>Investigation__c</referenceTo>
    <relationshipLabel>Resource Consult Reviews</relationshipLabel>
    <relationshipName>Resource_Consult_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>