force-app/main/default/objects/Resource_Consult_Review__c/fields/Review_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Review_Date_Time__c</fullName>
    <label>Review Date Time</label>
    <type>DateTime</type>
</CustomField>