force-app/main/default/objects/Resource_Consult_Review__c/fields/Select_User_Type__c.field-meta.xml
<CustomField>
    <fullName>Select_User_Type__c</fullName>
    <label>Select User Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case Management Workers</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Resource Staff</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>