force-app/main/default/objects/Resource_Consult_Review__c/fields/User_Name_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Name_Type__c</fullName>
    <label>User Name-Type</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>